Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77011

[clang6] QtWebEngine compile error due to missing vtable

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 5.12.5, 5.13.1, 5.14.0 Alpha
    • 5.12.4
    • WebEngine
    • None
    • Ubuntu 18.04
    • Linux/X11
    • bb2a0bbd71019c44a38ba8608f8a7b3cd2106f7e (qt/qtwebengine/5.12)

      • Compile error in QtWebEngine module:
        /data/build/Qt-5.12.4/qt-everywhere-src-5.12.4/qtwebengine/src/core/ozone/gl_ozone_glx_qt.h:52: undefined reference to `vtable for ui::GLOzoneGLXQt'
        
      • Complete link command:
      make[4]: Entering directory '/data/build/Qt-5.12.4/qt-everywhere-src-5.12.4/qtwebengine/src/core'
      rm -f libQt5WebEngineCore.so.5.12.4 libQt5WebEngineCore.so libQt5WebEngineCore.so.5 libQt5WebEngineCore.so.5.12
      g++ @/data/build/Qt-5.12.4/qt-everywhere-src-5.12.4/qtwebengine/src/core/release/QtWebEngineCore_o.rsp -Wl,--start-group @/data/build/Qt-5.12.4/qt-everywhere-src-5.12.4/qtwebengine/src/core/release/QtWebEngineCore_a.rsp -Wl,--end-group -Wl,-z,noexecstack -Wl,--gc-sections -Wl,-O1 -Wl,-z,now -Wl,-z,defs -Wl,-whole-archive -lqtwebenginecoreapi -Wl,-no-whole-archive -Wl,--no-undefined -Wl,--version-script,QtWebEngineCore.version -Wl,--enable-new-dtags -Wl,-z,origin -Wl,-rpath,\$ORIGIN -shared -Wl,-Bsymbolic-functions -Wl,-soname,libQt5WebEngineCore.so.5 -o libQt5WebEngineCore.so.5.12.4   /data/build/Qt-5.12.4/qt-everywhere-src-5.12.4/qtdeclarative/lib/libQt5Quick.so /data/build/Qt-5.12.4/qt-everywhere-src-5.12.4/qtbase/lib/libQt5Gui.so /data/build/Qt-5.12.4/qt-everywhere-src-5.12.4/qtwebchannel/lib/libQt5WebChannel.so /data/build/Qt-5.12.4/qt-everywhere-src-5.12.4/qtdeclarative/lib/libQt5Qml.so /data/build/Qt-5.12.4/qt-everywhere-src-5.12.4/qtbase/lib/libQt5Network.so /data/build/Qt-5.12.4/qt-everywhere-src-5.12.4/qtlocation/lib/libQt5Positioning.so /data/build/Qt-5.12.4/qt-everywhere-src-5.12.4/qtbase/lib/libQt5Core.so -lpthread -lpthread -ldl -lrt -lnss3 -lnssutil3 -lsmime3 -lplds4 -lplc4 -lnspr4 -lexpat -lresolv -lfreetype -lfontconfig -lpci -lasound -lm -lz -ldbus-1 -L/data/build/Qt-5.12.4/qt-everywhere-src-5.12.4/qtwebengine/src/core/api/release
      /data/build/Qt-5.12.4/qt-everywhere-src-5.12.4/qtwebengine/src/core/release/obj/QtWebEngineCore/surface_factory_qt.o: In function `QtWebEngineCore::SurfaceFactoryQt::SurfaceFactoryQt()':
      /data/build/Qt-5.12.4/qt-everywhere-src-5.12.4/qtwebengine/src/core/ozone/gl_ozone_glx_qt.h:52: undefined reference to `vtable for ui::GLOzoneGLXQt'
      collect2: error: ld returned 1 exit status
      Makefile.core_module:84: recipe for target '../../lib/libQt5WebEngineCore.so.5.12.4' failed
      make[4]: *** [../../lib/libQt5WebEngineCore.so.5.12.4] Error 1
      
      • Configuration:
      ./configure \
      	-recheck-all \
      	-prefix $DEST \
      	-opensource \
      	-confirm-license \
      	-release \
      	-force-debug-info \
      	-system-zlib \
      	-openssl-runtime \
      	-qt-libpng \
      	-qt-libjpeg \
      	-qt-sqlite \
      	-sql-sqlite \
      	-no-gif \
      	-nomake tests -nomake examples \
      	-no-dbus \
      	-no-opengl \
      	-no-use-gold-linker \
      	-icu \
      	-webengine-printing-and-pdf \
      	ICU_PREFIX=$ICUDIR \
      	OPENSSL_PREFIX=$OPENSSLDIR \
      	OPENSSL_LIBS='-lssl -lcrypto' \
      
      • The same revision builds fine on another Linux system (Ubuntu 18.04), so I suspect the environment does play some role here.
      • Also on Windows, QtWebEngine does build using the same configuration.
      • Clang 6.0 is used as compiler.

        1. config_failing.log
          143 kB
        2. config_failing.summary
          12 kB
        3. config_working.log
          104 kB
        4. config_working.summary
          12 kB
        5. libs.png
          libs.png
          14 kB
        6. snap1.png
          snap1.png
          12 kB
        For Gerrit Dashboard: QTBUG-77011
        # Subject Branch Project Status CR V

            michal Michal Klocek
            derfrank Frank Cieslok
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes