Fix detection of ozone x11 support

Fixes: QTBUG-77011
Change-Id: I0136b360c74970b912124f6f308f598c80eceba3
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>