src/core/ozone/surface_factory_qt.cpp
@@ -41,7 +41,7 @@
 #include "qtwebenginecoreglobal_p.h"
 #include "gl_context_qt.h"
 #include "gl_ozone_egl_qt.h"
-#if QT_CONFIG(webengine_system_x11)
+#if QT_CONFIG(webengine_ozone_x11)
 #include "gl_ozone_glx_qt.h"
 #endif
 
@@ -58,7 +58,7 @@ namespace QtWebEngineCore {
 SurfaceFactoryQt::SurfaceFactoryQt()
 {
     Q_ASSERT(qApp);
-#if QT_CONFIG(webengine_system_x11)
+#if QT_CONFIG(webengine_ozone_x11)
     if (GLContextHelper::getGlXConfig()) {
         m_impl = gl::kGLImplementationDesktopGL;
         m_ozone.reset(new ui::GLOzoneGLXQt());
