src/core/config/linux.pri
@@ -175,7 +175,7 @@ host_build {
     }
     !packagesExist(libpci): gn_args += use_libpci=false
 
-    qtConfig(webengine-system-x11): hasX11Dependencies() {
+    qtConfig(webengine-ozone-x11) {
         gn_args += ozone_platform_x11=true
         packagesExist(xscrnsaver): gn_args += use_xscrnsaver=true
     }
